--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ ul{
 
 .nav-brand{
     width: 50px;
+    font-weight: bolder;
 }
 
 /*Navigation Left*/
@@ -78,24 +79,36 @@ hr{
     display: none;    
 }
 
-
-/*SHOWCASE*/
+/*SHOWCASE SHOWCASE*/
 .showcase{
     width: 100%;
-    height: 550px;
+    height: 400px;
     background: url(./img/heroimage.jpg) no-repeat center/cover;
-    padding-bottom: 10px 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-end;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
+    position: relative;    
 }
 
-.showcase .content{
-    width: 40%;
-    padding: 40px 0 0 30px;
-    color:#F2F2F2;
+.site-title{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 2;
+}
+
+.site-title h1{
+    font-size: 45px;
+    font-weight: bolder;
+    text-align: center;
+}
+
+.site-title p{
+    color: #C8CECA;
+    text-align: center;
+}
+
+.site-title h1,
+.site-title p{
+    margin-bottom: 10px;
 }
 
 .btn{
@@ -116,17 +129,14 @@ hr{
     border: 1px solid #C8CECA;
 }
 
-.showcase h1{
-    font-size: 40px;
-    font-weight: bolder;
-}
-
-.showcase p{
-    font-size: 14px;
-}
-.showcase h1,
-.showcase p{
-    margin-bottom: 10px;
+.overlay{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    background: rgba(23, 26, 19, 0.1);
 }
 
 
@@ -170,27 +180,32 @@ hr{
     height: 350px;
     background: url('./img/banner1.jpg')no-repeat center center/cover;
     margin-bottom: 40px;
+    position: relative;
 }
 
 .cards-banner-one .content{
-    width: 40%;
-    padding: 90px 0 0 30px;
-    color:#F2F2F2;
-    text-align: center;
+    position: absolute;
+    top: 30%;
+    left: 15%;
+    transform: translateY(-50%);
+    z-index: 2;
+    padding: 50px 0 0 150px;
 }
 
 .cards-banner-one h2{
-    font-size: 24px;
+    font-size: 32px;
     font-weight: bold;
+    text-align: right;
 }
 
 .cards-banner-one p{
-    font-size: 14px;
+    color: #F2F2F2;
+    text-align: right;
 }
 
 .cards-banner-one p,
 .cards-banner-one h2{
-    margin: 10px 0 20px 0;
+    margin-bottom: 20px;
 }
 
 /*CARDS BANNER TWO*/
@@ -199,27 +214,31 @@ hr{
     height: 350px;
     background: url('./img/banner3.jpg') no-repeat center center/cover;
     margin-bottom: 40px;
+    position: relative;
 }
 
 .cards-banner-two .content{
-    width: 40%;
-    padding: 30px 0 0 30px;
-    color: #F2F2F2;
+    position: absolute;
+    top: 20%;
+    right: 45%;
+    transform: translateY(-50%);
+    z-index: 2;
+    padding: 70px 0 0 200px;
 }
 
 .cards-banner-two h2{
-    font-size: 24px;
+    font-size: 32px;
     font-weight: bold;
+    color: #3D4341;
 }
 
 .cards-banner-two p{
-    font-size: 14px;
+    color: #060F00;
 }
 
 .cards-banner-two p,
 .cards-banner-two h2{
-    margin: 10px 0 20px 0;
-    color: #3D4341;
+    margin: 10px 0 10px 0;
 }
 
 /*SOCIAL*/
