--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ ul{
 
 .nav-brand{
     width: 50px;
+    font-weight: bolder;
 }
 
 /*Navigation Left*/
@@ -78,64 +79,77 @@ hr{
     display: none;    
 }
 
-
-/*SHOWCASE*/
+/*SHOWCASE SHOWCASE*/
 .showcase{
     width: 100%;
-    height: 550px;
+    height: 400px;
     background: url(./img/heroimage.jpg) no-repeat center/cover;
-    padding-bottom: 10px 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-end;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
+    position: relative;    
 }
 
-.showcase .content{
-    width: 40%;
-    padding: 40px 0 0 30px;
-    color:#F2F2F2;
+.site-title{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 2;
+}
+
+.site-title h1{
+    font-size: 45px;
+    font-weight: bolder;
+    text-align: center;
+}
+
+.site-title p{
+    color: #C8CECA;
+    text-align: center;
+}
+
+.site-title h1,
+.site-title p{
+    margin-bottom: 10px;
 }
 
 .btn{
     cursor: pointer;
     display: inline-block;
-    border: 0;
     font-weight: bold;
-    padding: 10px 20px;
     background: #171A13;
     color: #F2F2F2;
-    font-size: 14px;
-    border: 1px solid #F2F2F2;
+    border: 1px solid #3D4341;
+    padding: 10px 20px;
     opacity: .7;
 }
 
 .btn:hover{
     background: #1E401B;
-    border: 1px solid #C8CECA;
+    border: 1px solid #060F00;
 }
 
-.showcase h1{
-    font-size: 40px;
-    font-weight: bolder;
-}
-
-.showcase p{
-    font-size: 14px;
-}
-.showcase h1,
-.showcase p{
-    margin-bottom: 10px;
+.overlay{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    background: rgba(23, 26, 19, 0.1);
 }
 
 
 /*NEWS CARDS*/
+.news-title{
+    font-size: 20px;
+    font-weight: bold;
+    text-align: left;
+}
+
 .news-cards{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 25px;
-    margin: 10px 0;
+    margin: 20px 0;
 }
 
 .news-cards img{
@@ -169,28 +183,33 @@ hr{
     width: 100%;
     height: 350px;
     background: url('./img/banner1.jpg')no-repeat center center/cover;
-    margin-bottom: 40px;
+    margin-bottom: 50px;
+    position: relative;
 }
 
 .cards-banner-one .content{
-    width: 40%;
-    padding: 90px 0 0 30px;
-    color:#F2F2F2;
-    text-align: center;
+    position: absolute;
+    top: 30%;
+    left: 15%;
+    transform: translateY(-50%);
+    z-index: 2;
+    padding: 50px 0 0 150px;
 }
 
 .cards-banner-one h2{
-    font-size: 24px;
+    font-size: 32px;
     font-weight: bold;
+    text-align: right;
 }
 
 .cards-banner-one p{
-    font-size: 14px;
+    color: #F2F2F2;
+    text-align: right;
 }
 
 .cards-banner-one p,
 .cards-banner-one h2{
-    margin: 10px 0 20px 0;
+    margin-bottom: 20px;
 }
 
 /*CARDS BANNER TWO*/
@@ -198,54 +217,72 @@ hr{
     width: 100%;
     height: 350px;
     background: url('./img/banner3.jpg') no-repeat center center/cover;
-    margin-bottom: 40px;
+    margin-bottom: 50px;
+    position: relative;
 }
 
 .cards-banner-two .content{
-    width: 40%;
-    padding: 30px 0 0 30px;
-    color: #F2F2F2;
+    position: absolute;
+    top: 20%;
+    right: 45%;
+    transform: translateY(-50%);
+    z-index: 2;
+    padding: 70px 0 0 200px;
 }
 
 .cards-banner-two h2{
-    font-size: 24px;
+    font-size: 32px;
     font-weight: bold;
+    color: #3D4341;
 }
 
 .cards-banner-two p{
-    font-size: 14px;
+    color: #060F00;
 }
 
 .cards-banner-two p,
 .cards-banner-two h2{
-    margin: 10px 0 20px 0;
-    color: #3D4341;
+    margin: 10px 0 10px 0;
 }
 
 /*SOCIAL*/
 .social{
-    margin: 50px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    text-align: center;
+    margin-bottom: 50px;
 }
 
-.social{
-    text-align: center;
-    font-size: 17px;
-    margin-bottom: 40px;
+.subscribe .btn{
+    font-size: 20px;
+    font-weight: bold;
+    background: #1E401B;
+    border: 1px solid #1E401B;
+}
+
+.subscribe .btn:hover{
+    background: #171A13;
+    color: #F2F2F2;
+    border: 1px solid #3D4341;
 }
 
 .links{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: left;
 }
 
-.link a{
-    margin: 0 30px;  
+.links a{
+    margin: 0 10px;  
 }
 
 .links a i{
     font-size: 2rem;
-    padding: 0  10px;
+    padding: 0  5px;
+}
+
+.links a i:hover{
+    color: #335614;
 }
 
 /*FOOTER*/
@@ -268,6 +305,7 @@ hr{
         position: absolute;
         top: 0;
         left: 0;
+        z-index: 3;
         background: #171A13;
         height: 100%;
         padding: 30px;
@@ -281,7 +319,7 @@ hr{
     }
 
     .nav-main ul.nav-menu li{
-        padding: 20px;
+        padding: 15px;
         font-size: 14px;
     }
     .nav-main ul.nav-menu-right{
